rest-frontend: clearify which button is meant in error msg

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -111,7 +111,7 @@
     "APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.ENTRY_DOES_ALREADY_EXIST": "An entry with the entered details (organization, application, scope and slug) does already exist. Please choose different values.",
     "APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.ENTRY_INVALID_APPLICATION": "The submitted application name does not match the requirements.",
     "APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.ENTRY_INVALID_CONFIGURATION_FORMAT": "The submitted configuration format is not supported.",
-    "APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.ENTRY_INVALID_CONFIGURATION_VALUE": "The submitted configuration snippet could not be parsed within the submitted format. If you are sure the format is correct, please report us the error on GitHub (use the button below)! You can also try one of the other plugins in the meantime.",
+    "APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.ENTRY_INVALID_CONFIGURATION_VALUE": "The submitted configuration snippet could not be parsed within the submitted format. If you are sure the format is correct, please report us the error on GitHub (use the Feedback button on the bottom)! You can also try one of the other plugins in the meantime.",
     "APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.ENTRY_INVALID_DESCRIPTION": "The submitted description does not match the requirements.",
     "APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.ENTRY_INVALID_ORGANIZATION": "The submitted organization name does not match the requirements.",
     "APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.ENTRY_INVALID_SCOPE": "The submitted application scope does not match the requirements",
@@ -167,7 +167,7 @@
     "APP.ENTRIES.EDIT.NOTIFICATION.HEADER": "Edit configuration snippet",
     "APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.ENTRY_DOES_NOT_EXIST": "The entry you are attempting to change does not exist. Looks like it was deleted while you were looking at it.",
     "APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.ENTRY_INVALID_CONFIGURATION_FORMAT": "The submitted configuration format is not supported.",
-    "APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.ENTRY_INVALID_CONFIGURATION_VALUE": "The submitted configuration snippet could not be parsed within the submitted format. If you are sure the format is correct, please report us the error on GitHub (use the button below)! You can also try one of the other plugins in the meantime.",
+    "APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.ENTRY_INVALID_CONFIGURATION_VALUE": "The submitted configuration snippet could not be parsed within the submitted format. If you are sure the format is correct, please report us the error on GitHub (use the Feedback button on the bottom)! You can also try one of the other plugins in the meantime.",
     "APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.ENTRY_INVALID_DESCRIPTION": "The submitted description does not match the requirements.",
     "APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.ENTRY_INVALID_TAG": "One or more of the submitted tags does not match the requirements.",
     "APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.ENTRY_INVALID_TITLE": "The submitted title does not match the requirements.",
