rest-frontend: add missing breadcrumb translation

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -54,6 +54,7 @@
     "APP.AUTH.REGISTRATION.PLACEHOLDER.PASSWORD_CONFIRMATION": "Please confirm your password",
     "APP.AUTH.REGISTRATION.PLACEHOLDER.USERNAME": "Please enter a username",
     
+	"APP.BREADCRUMBS.MAIN.ACCOUNT": "Account",
     "APP.BREADCRUMBS.MAIN.AUTH.LOGIN": "Login",
     "APP.BREADCRUMBS.MAIN.AUTH.REGISTER": "Register",
     "APP.BREADCRUMBS.MAIN.CONVERSION": "Snippet conversion",
