rest-frontend: add webgui to home page

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -308,6 +308,8 @@
 	"APP.HOME.LABEL.ORIENTATION.5.HEADLINE": "Elektrify your Application",
 	"APP.HOME.LABEL.TOOL.QTGUI.DETAILS": "Elektra offers a GUI based on Qt Quick. It simplifies common tasks and offers easy access to the key database itself. A description for the GUI tool can be found <a href=\"/tools/qt-gui\">here</a>.",
 	"APP.HOME.LABEL.TOOL.QTGUI.HEADLINE": "Graphical User Interface",
+	"APP.HOME.LABEL.TOOL.WEBGUI.DETAILS": "The Web GUI allows for remote configuration of systems. Besides the configuration of single systems, it also features cluster configuration.",
+	"APP.HOME.LABEL.TOOL.WEBGUI.HEADLINE": "Web GUI",
     
     "APP.NAV.BUTTON.LOGIN": "Login",
     "APP.NAV.BUTTON.LOGOUT": "Logout",
