rest-frontend: fix links on home page

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -286,11 +286,11 @@
     "APP.HOME.HEADLINE.WHATSNEW": "What's new?",
     "APP.HOME.LABEL.KEYFACT.1.DETAILS": "Elektra stores configuration in a global, hierarchical key database. <a href=\"/tutorials/mount-configuration-files\">Mount configuration files</a> into the hierarchy, override single configuration parameters or use profiles. <a href=\"/manpages/kdb\">KDB</a> provides easy access.",
     "APP.HOME.LABEL.KEYFACT.1.HEADLINE": "Global configuration database",
-    "APP.HOME.LABEL.KEYFACT.2.DETAILS": "All common and important configuration formats are supported through various <a href=\"/plugins\">storage plugins</a>: XML, JSON, INI or even special configuration files like /etc/hosts.",
+    "APP.HOME.LABEL.KEYFACT.2.DETAILS": "All common and important configuration formats are supported through various <a href=\"/plugins/\">storage plugins</a>: XML, JSON, INI or even special configuration files like /etc/hosts.",
     "APP.HOME.LABEL.KEYFACT.2.HEADLINE": "Human readable configuration files",
-    "APP.HOME.LABEL.KEYFACT.3.DETAILS": "Nearly all functionality of Elektra is implemented in <a href=\"/plugins\">plugins</a> and <a href=\"/tools\">tools</a> which can be combined to powerful functionality.",
+    "APP.HOME.LABEL.KEYFACT.3.DETAILS": "Nearly all functionality of Elektra is implemented in <a href=\"/plugins/\">plugins</a> and <a href=\"/tools/\">tools</a> which can be combined to powerful functionality.",
     "APP.HOME.LABEL.KEYFACT.3.HEADLINE": "Extendable through plugins and tools",
-    "APP.HOME.LABEL.KEYFACT.4.DETAILS": "Automate configuration tasks with powerful <a href=\"/tools\">tools</a>, surf through configuration with <a href=\"/tools/qt-gui\">GUIs</a>, and <a href=\"/plugins/dbus\">notify</a> other applications about configuration changes.",
+    "APP.HOME.LABEL.KEYFACT.4.DETAILS": "Automate configuration tasks with powerful <a href=\"/tools/\">tools</a>, surf through configuration with <a href=\"/tools/qt-gui\">GUIs</a>, and <a href=\"/plugins/dbus\">notify</a> other applications about configuration changes.",
     "APP.HOME.LABEL.KEYFACT.4.HEADLINE": "Batteries included",
     "APP.HOME.LABEL.KEYFACT.5.DETAILS": "<a href=\"/tutorials/validate-configuration\">Validate configuration</a> immediately on changes, eliminate your configuration duplicates with the help of symbolic links or compute configuration parameters from other configuration values.",
     "APP.HOME.LABEL.KEYFACT.5.HEADLINE": "Configuration specification",
@@ -306,7 +306,7 @@
 	"APP.HOME.LABEL.ORIENTATION.4.HEADLINE": "Sharing of Configuration Snippets",
 	"APP.HOME.LABEL.ORIENTATION.5.DETAILS": "An important step in utilizing all of Elektras features is the elektrification of your application. We have written a <a href=\"/tutorials/integration-of-your-application\">tutorial</a> for you that explains how to do that!",
 	"APP.HOME.LABEL.ORIENTATION.5.HEADLINE": "Elektrify your Application",
-	"APP.HOME.LABEL.TOOL.OTHERS.DETAILS": "Also other applications like the <a href=\"http://www.oyranos.org/kolormanager/\">KDE KolorManager</a> already use Elektra and its awesome features!",
+	"APP.HOME.LABEL.TOOL.OTHERS.DETAILS": "Also other applications like the <a href=\"http://www.oyranos.org/kolormanager/\" target=\"_blank\">KDE KolorManager</a> already use Elektra and its awesome features!",
 	"APP.HOME.LABEL.TOOL.OTHERS.HEADLINE": "Other Applications",
 	"APP.HOME.LABEL.TOOL.QTGUI.DETAILS": "Elektra offers a GUI based on Qt Quick. It simplifies common tasks and offers easy access to the key database itself. A description for the GUI tool can be found <a href=\"/tools/qt-gui\">here</a>.",
 	"APP.HOME.LABEL.TOOL.QTGUI.HEADLINE": "Graphical User Interface",
