rest-frontend: 'share snippet' button redirecting to login + translation file reformat

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -1,6 +1,6 @@
 {
-	"APP.AUTH.LOGIN.ALERT.ADVANTAGE_INFO.MSG": "A user account on our page enables you to share your own configuration snippets. It also allows us to give additional permissions to users (moderative abilities). To be an active member of our community, you should definitely have an account and share your own snippets!",
-	"APP.AUTH.LOGIN.ALERT.ADVANTAGE_INFO.TITLE": "What is this login for?",
+    "APP.AUTH.LOGIN.ALERT.ADVANTAGE_INFO.MSG": "A user account on our page enables you to share your own configuration snippets. It also allows us to give additional permissions to users (moderative abilities). To be an active member of our community, you should definitely have an account and share your own snippets!",
+    "APP.AUTH.LOGIN.ALERT.ADVANTAGE_INFO.TITLE": "What is this login for?",
     "APP.AUTH.LOGIN.BUTTON.REGISTER": "Go to registration",
     "APP.AUTH.LOGIN.BUTTON.SUBMIT": "Sign in",
     "APP.AUTH.LOGIN.LABEL.USERNAME": "Username:",
@@ -54,7 +54,7 @@
     "APP.AUTH.REGISTRATION.PLACEHOLDER.PASSWORD_CONFIRMATION": "Please confirm your password",
     "APP.AUTH.REGISTRATION.PLACEHOLDER.USERNAME": "Please enter a username",
     
-	"APP.BREADCRUMBS.MAIN.ACCOUNT": "Account",
+    "APP.BREADCRUMBS.MAIN.ACCOUNT": "Account",
     "APP.BREADCRUMBS.MAIN.AUTH.LOGIN": "Login",
     "APP.BREADCRUMBS.MAIN.AUTH.REGISTER": "Register",
     "APP.BREADCRUMBS.MAIN.CONVERSION": "Snippet conversion",
@@ -302,17 +302,18 @@
     "APP.HOME.LABEL.ORIENTATION.2.HEADLINE": "Use Elektra outside C/C++",
     "APP.HOME.LABEL.ORIENTATION.3.DETAILS": "Of course we can! An initiative like Elektra asks periodically for <a ui-sref=\"main.dyn.decisions\">decisions</a>! We welcome everyone to join the discussions!",
     "APP.HOME.LABEL.ORIENTATION.3.HEADLINE": "Can you elaborate on the Why?",
-	"APP.HOME.LABEL.ORIENTATION.4.DETAILS": "This website does not only contain the news and documentation around Elektra, but does also comprise a service that allows for sharing, searching, converting and downloading of configuration snippets in various formats. To search for a snippet, use the search bar at the <a href=\"#top\">top of the page</a>. Uploading new snippets requires an account, which you can register <a href=\"/auth/login\">here</a>.",
-	"APP.HOME.LABEL.ORIENTATION.4.HEADLINE": "Sharing of Configuration Snippets",
-	"APP.HOME.LABEL.ORIENTATION.5.DETAILS": "An important step in utilizing all of Elektras features is the elektrification of your application. We have written a <a href=\"/tutorials/integration-of-your-application\">tutorial</a> for you that explains how to do that!",
-	"APP.HOME.LABEL.ORIENTATION.5.HEADLINE": "Elektrify your Application",
-	"APP.HOME.LABEL.TOOL.OTHERS.DETAILS": "Also other applications like the <a href=\"http://www.oyranos.org/kolormanager/\" target=\"_blank\">KDE KolorManager</a> already use Elektra and its awesome features!",
-	"APP.HOME.LABEL.TOOL.OTHERS.HEADLINE": "Other Applications",
-	"APP.HOME.LABEL.TOOL.QTGUI.DETAILS": "Elektra offers a GUI based on Qt Quick. It simplifies common tasks and offers easy access to the key database itself. A description for the GUI tool can be found <a href=\"/tools/qt-gui\">here</a>.",
-	"APP.HOME.LABEL.TOOL.QTGUI.HEADLINE": "Graphical User Interface",
-	"APP.HOME.LABEL.TOOL.WEBGUI.DETAILS": "The Web GUI allows for remote configuration of systems. Besides the configuration of single systems, it also features cluster configuration.",
-	"APP.HOME.LABEL.TOOL.WEBGUI.HEADLINE": "Web GUI",
+    "APP.HOME.LABEL.ORIENTATION.4.DETAILS": "This website does not only contain the news and documentation around Elektra, but does also comprise a service that allows for sharing, searching, converting and downloading of configuration snippets in various formats. To search for a snippet, use the search bar at the <a href=\"#top\">top of the page</a>. Uploading new snippets requires an account, which you can register <a href=\"/auth/login\">here</a>.",
+    "APP.HOME.LABEL.ORIENTATION.4.HEADLINE": "Sharing of Configuration Snippets",
+    "APP.HOME.LABEL.ORIENTATION.5.DETAILS": "An important step in utilizing all of Elektras features is the elektrification of your application. We have written a <a href=\"/tutorials/integration-of-your-application\">tutorial</a> for you that explains how to do that!",
+    "APP.HOME.LABEL.ORIENTATION.5.HEADLINE": "Elektrify your Application",
+    "APP.HOME.LABEL.TOOL.OTHERS.DETAILS": "Also other applications like the <a href=\"http://www.oyranos.org/kolormanager/\" target=\"_blank\">KDE KolorManager</a> already use Elektra and its awesome features!",
+    "APP.HOME.LABEL.TOOL.OTHERS.HEADLINE": "Other Applications",
+    "APP.HOME.LABEL.TOOL.QTGUI.DETAILS": "Elektra offers a GUI based on Qt Quick. It simplifies common tasks and offers easy access to the key database itself. A description for the GUI tool can be found <a href=\"/tools/qt-gui\">here</a>.",
+    "APP.HOME.LABEL.TOOL.QTGUI.HEADLINE": "Graphical User Interface",
+    "APP.HOME.LABEL.TOOL.WEBGUI.DETAILS": "The Web GUI allows for remote configuration of systems. Besides the configuration of single systems, it also features cluster configuration.",
+    "APP.HOME.LABEL.TOOL.WEBGUI.HEADLINE": "Web GUI",
     
+    "APP.NAV.BUTTON.ACCOUNT": "Account",
     "APP.NAV.BUTTON.LOGIN": "Login",
     "APP.NAV.BUTTON.LOGOUT": "Logout",
     "APP.NAV.BUTTON.MAIN.CONVERSION": "Convert snippet",
@@ -323,7 +324,7 @@
     "APP.NAV.BUTTON.MAIN.TUTORIALS": "Tutorials",
     "APP.NAV.BUTTON.MAIN.USERS": "Users",
     "APP.NAV.BUTTON.NEWNETRY": "New snippet",
-    "APP.NAV.BUTTON.ACCOUNT": "Account",
+    "APP.NAV.BUTTON.SHARESNIPPET": "Share Snippet",
     
     "APP.USERS.DETAILS.BUTTON.CHANGE_EMAIL": "Change email",
     "APP.USERS.DETAILS.BUTTON.CHANGE_PASSWORD": "Change password",
