rest-frontend: fast, nodep, cross-platform and 100% free (+ second option as comment)

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -283,6 +283,7 @@
     "APP.HOME.HEADLINE.HOWITWORKS": "Want to see how it works?",
     "APP.HOME.HEADLINE.SLOGAN.FIRST": "Configure everything, {{ adjectives[index] }}.",
     "APP.HOME.HEADLINE.SLOGAN.SECOND": "Elektra - the configuration framework for everyone",
+	"APP.HOME.HEADLINE.SLOGAN.THIRD": "Elektra is fast without dependencies (core), cross-platform and 100% free software (<a href=\"https://blob.libelektra.org/doc/LICENSE.md\" target=\"_blank\">BSD licensed</a>).",
     "APP.HOME.HEADLINE.WHATSNEW": "What's new?",
     "APP.HOME.LABEL.KEYFACT.1.DETAILS": "Elektra stores configuration in a global, hierarchical key database. <a href=\"/tutorials/mount-configuration-files\">Mount configuration files</a> into the hierarchy, override single configuration parameters or use profiles. <a href=\"/manpages/kdb\">KDB</a> provides easy access.",
     "APP.HOME.LABEL.KEYFACT.1.HEADLINE": "Global configuration database",
@@ -296,6 +297,12 @@
     "APP.HOME.LABEL.KEYFACT.5.HEADLINE": "Configuration specification",
     "APP.HOME.LABEL.KEYFACT.6.DETAILS": "Utilize Elektra's <a href=\"/tools/gen\">code generator</a> to generate type-safe configuration access code based on the same specification as used for validation.",
     "APP.HOME.LABEL.KEYFACT.6.HEADLINE": "Code generation",
+    "APP.HOME.LABEL.KEYFACT.7.DETAILS": "The Elektra core is written without external dependencies and with high regard to good performance.",
+    "APP.HOME.LABEL.KEYFACT.7.HEADLINE": "Fast without dependencies",
+    "APP.HOME.LABEL.KEYFACT.8.DETAILS": "Thanks to all components being licensed under the <a href=\"https://blob.libelektra.org/doc/LICENSE.md\" target=\"_blank\">BSD license</a>, the Elektra project comprises only of free software.",
+    "APP.HOME.LABEL.KEYFACT.8.HEADLINE": "100% free Software",
+    "APP.HOME.LABEL.KEYFACT.9.DETAILS": "Elektra strives to eliminate cross-platform related issues and is therefore suitable for all systems.",
+    "APP.HOME.LABEL.KEYFACT.9.HEADLINE": "Cross-Platform",
     "APP.HOME.LABEL.ORIENTATION.1.DETAILS": "You need help in developing a custom plugin? Check out the <a ui-sref=\"main.dyn.tutorials({file: 'plugins-introduction'})\">plugin tutorial</a>!",
     "APP.HOME.LABEL.ORIENTATION.1.HEADLINE": "Develop custom plugin",
     "APP.HOME.LABEL.ORIENTATION.2.DETAILS": "Of course you can use Elektra also outside a C or C++ environment. Have a look at our <a ui-sref=\"main.dyn.bindings\">language bindings</a>!",
