rest-frontend: typewriter effect for slogan

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -281,9 +281,9 @@
     "APP.HOME.BUTTON.GETSTARTED": "Get started",
     "APP.HOME.BUTTON.TUTORIALS": "Tutorials",
     "APP.HOME.HEADLINE.HOWITWORKS": "Want to see how it works?",
-    "APP.HOME.HEADLINE.SLOGAN.FIRST": "Configure everything, {{ adjectives[index] }}.",
+    "APP.HOME.HEADLINE.SLOGAN.FIRST": "Configure everything,",
     "APP.HOME.HEADLINE.SLOGAN.SECOND": "Elektra - the configuration framework for everyone",
-	"APP.HOME.HEADLINE.SLOGAN.THIRD": "Elektra is fast without dependencies (core), cross-platform and 100% free software (<a href=\"https://blob.libelektra.org/doc/LICENSE.md\" target=\"_blank\">BSD licensed</a>).",
+    "APP.HOME.HEADLINE.SLOGAN.THIRD": "Elektra is fast without dependencies (core), cross-platform and 100% free software (<a href=\"https://blob.libelektra.org/doc/LICENSE.md\" target=\"_blank\">BSD licensed</a>).",
     "APP.HOME.HEADLINE.WHATSNEW": "What's new?",
     "APP.HOME.LABEL.KEYFACT.1.DETAILS": "Elektra stores configuration in a global, hierarchical key database. <a href=\"/tutorials/mount-configuration-files\">Mount configuration files</a> into the hierarchy, override single configuration parameters or use profiles. <a href=\"/manpages/kdb\">KDB</a> provides easy access.",
     "APP.HOME.LABEL.KEYFACT.1.HEADLINE": "Global configuration database",
