rest-frontend: allow for plugin configuration

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -87,8 +87,10 @@
     "APP.CONVERSION.BUTTON.CONVERT": "Convert snippet",
     "APP.CONVERSION.BUTTON.REPORT_PROBLEM": "Report problem on GitHub",
     "APP.CONVERSION.LABEL.INPUT.FORMAT": "Input format:",
+    "APP.CONVERSION.LABEL.INPUT.FORMAT.CONF": "Additional plugin parameters:",
     "APP.CONVERSION.LABEL.INPUT.SNIPPET": "Input snippet:",
     "APP.CONVERSION.LABEL.OUTPUT.FORMAT": "Output format:",
+    "APP.CONVERSION.LABEL.OUTPUT.FORMAT.CONF": "Additional plugin parameters:",
     "APP.CONVERSION.LABEL.OUTPUT.SNIPPET": "Output snippet:",
     "APP.CONVERSION.LABEL.OUTPUT.VALIDATED": "Validated",
     "APP.CONVERSION.LABEL.VALIDATION.INPUT.FORMAT.REQUIRED": "You have to select an input format.",
@@ -194,6 +196,7 @@
     "APP.ENTRIES.FORM.BUTTON.SUBMIT": "Submit",
     "APP.ENTRIES.FORM.LABEL.APPLICATION": "Application:",
     "APP.ENTRIES.FORM.LABEL.CONFIGURATION.FORMAT": "Format:",
+    "APP.ENTRIES.FORM.LABEL.CONFIGURATION.FORMAT.CONF": "Additional plugin parameters:",
     "APP.ENTRIES.FORM.LABEL.CONFIGURATION.VALUE": "Configuration:",
     "APP.ENTRIES.FORM.LABEL.DESCRIPTION": "Description:",
     "APP.ENTRIES.FORM.LABEL.ORGANIZATION": "Organization:",
