website: add license

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -283,7 +283,7 @@
     "APP.HOME.HEADLINE.HOWITWORKS": "Want to see how it works?",
     "APP.HOME.HEADLINE.SLOGAN.FIRST": "Configure everything,",
     "APP.HOME.HEADLINE.SLOGAN.SECOND": "Elektra - the configuration framework for everyone",
-    "APP.HOME.HEADLINE.SLOGAN.THIRD": "Elektra is fast without dependencies (core), cross-platform and 100% free software (<a href=\"https://blob.libelektra.org/doc/LICENSE.md\" target=\"_blank\">BSD licensed</a>).",
+    "APP.HOME.HEADLINE.SLOGAN.THIRD": "Elektra's core is fast, without dependencies, cross-platform and 100% free software (<a href=\"devgettingstarted/license\">BSD licensed</a>).",
     "APP.HOME.HEADLINE.WHATSNEW": "What's new?",
     "APP.HOME.LABEL.KEYFACT.1.DETAILS": "Elektra stores configuration in a global, hierarchical key database. <a href=\"/tutorials/mount-configuration-files\">Mount configuration files</a> into the hierarchy, override single configuration parameters or use profiles. <a href=\"/manpages/kdb\">KDB</a> provides easy access.",
     "APP.HOME.LABEL.KEYFACT.1.HEADLINE": "Global configuration database",
@@ -299,7 +299,7 @@
     "APP.HOME.LABEL.KEYFACT.6.HEADLINE": "Code generation",
     "APP.HOME.LABEL.KEYFACT.7.DETAILS": "The Elektra core is written without external dependencies and with high regard to good performance.",
     "APP.HOME.LABEL.KEYFACT.7.HEADLINE": "Fast without dependencies",
-    "APP.HOME.LABEL.KEYFACT.8.DETAILS": "Thanks to all components being licensed under the <a href=\"https://blob.libelektra.org/doc/LICENSE.md\" target=\"_blank\">BSD license</a>, the Elektra project comprises only of free software.",
+    "APP.HOME.LABEL.KEYFACT.8.DETAILS": "Thanks to all components being licensed under the <a href=\"devgettingstarted/license\">BSD license</a>, the Elektra project comprises only of free software.",
     "APP.HOME.LABEL.KEYFACT.8.HEADLINE": "100% free Software",
     "APP.HOME.LABEL.KEYFACT.9.DETAILS": "Elektra strives to eliminate cross-platform related issues and is therefore suitable for all systems.",
     "APP.HOME.LABEL.KEYFACT.9.HEADLINE": "Cross-Platform",
