--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -283,32 +283,32 @@
     "APP.HOME.HEADLINE.HOWITWORKS": "Want to see how it works?",
     "APP.HOME.HEADLINE.SLOGAN.FIRST": "Configure everything,",
     "APP.HOME.HEADLINE.SLOGAN.SECOND": "Elektra - the configuration framework for everyone",
-    "APP.HOME.HEADLINE.SLOGAN.THIRD": "Elektra's core is fast, without dependencies, cross-platform and 100% free software (<a href=\"devgettingstarted/license\">BSD licensed</a>).",
+    "APP.HOME.HEADLINE.SLOGAN.THIRD": "Elektra's core is fast, without dependencies, cross-platform, and all parts are 100% free software (<a href=\"devgettingstarted/license\">BSD licensed</a>).",
     "APP.HOME.HEADLINE.WHATSNEW": "What's new?",
-    "APP.HOME.LABEL.KEYFACT.1.DETAILS": "Elektra stores configuration in a global, hierarchical key database. <a href=\"/tutorials/mount-configuration-files\">Mount configuration files</a> into the hierarchy, override single configuration parameters or use profiles. <a href=\"/manpages/kdb\">KDB</a> provides easy access.",
-    "APP.HOME.LABEL.KEYFACT.1.HEADLINE": "Global configuration database",
-    "APP.HOME.LABEL.KEYFACT.2.DETAILS": "All common and important configuration formats are supported through various <a href=\"/plugins/\">storage plugins</a>: XML, JSON, INI or even special configuration files like /etc/hosts.",
-    "APP.HOME.LABEL.KEYFACT.2.HEADLINE": "Human readable configuration files",
-    "APP.HOME.LABEL.KEYFACT.3.DETAILS": "Nearly all functionality of Elektra is implemented in <a href=\"/plugins/\">plugins</a> and <a href=\"/tools/\">tools</a> which can be combined to powerful functionality.",
-    "APP.HOME.LABEL.KEYFACT.3.HEADLINE": "Extendable through plugins and tools",
+    "APP.HOME.LABEL.KEYFACT.1.DETAILS": "Elektra stores configuration in a global, hierarchical key database. <a href=\"/tutorials/mount-configuration-files\">Mount configuration files</a> into the hierarchy, override single configuration parameters or use profiles. <a href=\"/manpages/kdb\">kdb (1)</a> provides easy access.",
+    "APP.HOME.LABEL.KEYFACT.1.HEADLINE": "Global Configuration Database",
+    "APP.HOME.LABEL.KEYFACT.2.DETAILS": "All common and important configuration formats are supported through various <a href=\"/plugins/\">storage plugins</a>: XML, JSON, INI, and even special configuration files like <tt>/etc/hosts</tt>.",
+    "APP.HOME.LABEL.KEYFACT.2.HEADLINE": "Human-readable Configuration Files",
+    "APP.HOME.LABEL.KEYFACT.3.DETAILS": "Nearly all functionality of Elektra is implemented in <a href=\"/plugins/\">plugins</a> which can be combined to powerful functionality.",
+    "APP.HOME.LABEL.KEYFACT.3.HEADLINE": "Extendability",
     "APP.HOME.LABEL.KEYFACT.4.DETAILS": "Automate configuration tasks with powerful <a href=\"/tools/\">tools</a>, surf through configuration with <a href=\"/tools/qt-gui\">GUIs</a>, and <a href=\"/plugins/dbus\">notify</a> other applications about configuration changes.",
-    "APP.HOME.LABEL.KEYFACT.4.HEADLINE": "Batteries included",
+    "APP.HOME.LABEL.KEYFACT.4.HEADLINE": "Batteries Included",
     "APP.HOME.LABEL.KEYFACT.5.DETAILS": "<a href=\"/tutorials/validate-configuration\">Validate configuration</a> immediately on changes, eliminate your configuration duplicates with the help of symbolic links or compute configuration parameters from other configuration values.",
-    "APP.HOME.LABEL.KEYFACT.5.HEADLINE": "Configuration specification",
+    "APP.HOME.LABEL.KEYFACT.5.HEADLINE": "Configuration Specification",
     "APP.HOME.LABEL.KEYFACT.6.DETAILS": "Utilize Elektra's <a href=\"/tools/gen\">code generator</a> to generate type-safe configuration access code based on the same specification as used for validation.",
-    "APP.HOME.LABEL.KEYFACT.6.HEADLINE": "Code generation",
+    "APP.HOME.LABEL.KEYFACT.6.HEADLINE": "Code Generation",
     "APP.HOME.LABEL.KEYFACT.7.DETAILS": "The Elektra core is written without external dependencies and with high regard to good performance.",
-    "APP.HOME.LABEL.KEYFACT.7.HEADLINE": "Fast without dependencies",
+    "APP.HOME.LABEL.KEYFACT.7.HEADLINE": "Fast Without Dependencies",
     "APP.HOME.LABEL.KEYFACT.8.DETAILS": "Thanks to all components being licensed under the <a href=\"devgettingstarted/license\">BSD license</a>, the Elektra project comprises only of free software.",
-    "APP.HOME.LABEL.KEYFACT.8.HEADLINE": "100% free Software",
+    "APP.HOME.LABEL.KEYFACT.8.HEADLINE": "100% Free Software",
     "APP.HOME.LABEL.KEYFACT.9.DETAILS": "Elektra strives to eliminate cross-platform related issues and is therefore suitable for all systems.",
-    "APP.HOME.LABEL.KEYFACT.9.HEADLINE": "Cross-Platform",
+    "APP.HOME.LABEL.KEYFACT.9.HEADLINE": "Cross-platform",
     "APP.HOME.LABEL.ORIENTATION.1.DETAILS": "You need help in developing a custom plugin? Check out the <a ui-sref=\"main.dyn.tutorials({file: 'plugins-introduction'})\">plugin tutorial</a>!",
-    "APP.HOME.LABEL.ORIENTATION.1.HEADLINE": "Develop custom plugin",
+    "APP.HOME.LABEL.ORIENTATION.1.HEADLINE": "Develop Custom Plugins",
     "APP.HOME.LABEL.ORIENTATION.2.DETAILS": "Of course you can use Elektra also outside a C or C++ environment. Have a look at our <a ui-sref=\"main.dyn.bindings\">language bindings</a>!",
     "APP.HOME.LABEL.ORIENTATION.2.HEADLINE": "Use Elektra outside C/C++",
     "APP.HOME.LABEL.ORIENTATION.3.DETAILS": "Of course we can! An initiative like Elektra asks periodically for <a ui-sref=\"main.dyn.decisions\">decisions</a>! We welcome everyone to join the discussions!",
-    "APP.HOME.LABEL.ORIENTATION.3.HEADLINE": "Can you elaborate on the Why?",
+    "APP.HOME.LABEL.ORIENTATION.3.HEADLINE": "Can you Elaborate on the Why?",
     "APP.HOME.LABEL.ORIENTATION.4.DETAILS": "This website does not only contain the news and documentation around Elektra. It does also comprise a service that allows for sharing, searching, converting and downloading of configuration snippets in various formats. To search for a snippet, use the search bar at the <a href=\"#top\">top of the page</a>. Uploading new snippets requires an account, which you can register <a href=\"/auth/login\">here</a>.",
     "APP.HOME.LABEL.ORIENTATION.4.HEADLINE": "Sharing of Configuration Snippets",
     "APP.HOME.LABEL.ORIENTATION.5.DETAILS": "An important step in utilizing all of Elektras features is the elektrification of your application. We have written a <a href=\"/tutorials/integration-of-your-application\">tutorial</a> for you that explains how to do that!",
