doc: fix some links

--- a/doc/news/2014-07-28_0.8.7.md
+++ b/doc/news/2014-07-28_0.8.7.md
@@ -28,7 +28,7 @@ the glob plugin. These plugins are technical previews and will receive
 some improvements in the next release, too.
 
 Now a script for tab completion is available
-[here](/scripts/scripts/kdb-bash-completion), again thanks to Felix
+[here](/scripts/kdb-bash-completion), again thanks to Felix
 Berlakovich.
 
 The contextual values now got a [tutorial]
@@ -72,10 +72,10 @@ the change.
 
 ## Documentation ##
 
-[Specification of metadata](doc/specification.ini) and
-[contracts](doc/contracts.ini) written/greatly improved.
+[Specification of metadata](/doc/METADATA.ini) and
+[contracts](/doc/CONTRACT.ini) written/greatly improved.
 
-[Decisions](decisions) are introduced again.
+[Decisions](/doc/decisions) are introduced again.
 
 Most often the KeySet is ideal, e.g. when doing full iteration or when
 performing set operations. In some cases, however, a hierarchical data
