rest-frontend: add 'show on github' button to docu pages

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -395,5 +395,7 @@
     "APP.USERS.SEARCH.TABLE.HEADER.CREATEDAT": "Created at",
     "APP.USERS.SEARCH.TABLE.HEADER.EMAIL": "Email",
     "APP.USERS.SEARCH.TABLE.HEADER.RANK": "Rank",
-    "APP.USERS.SEARCH.TABLE.HEADER.USERNAME": "Username"
+    "APP.USERS.SEARCH.TABLE.HEADER.USERNAME": "Username",
+
+    "APP.WEBSITE.LISTFILES.BUTTON.SHOWONGITHUB": "Show on GitHub"
 }
