--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -288,11 +288,11 @@
     "APP.HOME.HEADLINE.WHATSNEW": "What's new?",
     "APP.HOME.LABEL.KEYFACT.1.DETAILS": "Elektra stores configuration in a global, hierarchical key database. <a href=\"/tutorials/mount-configuration-files\">Mount configuration files</a> into the hierarchy, override single configuration parameters or use profiles. <a href=\"/manpages/kdb\">kdb (1)</a> provides easy access.",
     "APP.HOME.LABEL.KEYFACT.1.HEADLINE": "Global Configuration Database",
-    "APP.HOME.LABEL.KEYFACT.2.DETAILS": "All common and important configuration formats are supported through various <a href=\"/plugins/\">storage plugins</a>: XML, JSON, INI, and even special configuration files like <tt>/etc/hosts</tt>.",
+    "APP.HOME.LABEL.KEYFACT.2.DETAILS": "All common and important configuration formats are supported through various <a href=\"/plugins/readme\">storage plugins</a>: XML, JSON, INI, and even special configuration files like <tt>/etc/hosts</tt>.",
     "APP.HOME.LABEL.KEYFACT.2.HEADLINE": "Human-readable Configuration Files",
-    "APP.HOME.LABEL.KEYFACT.3.DETAILS": "Nearly all functionality of Elektra is implemented in <a href=\"/plugins/\">plugins</a> which can be combined to powerful functionality.",
+    "APP.HOME.LABEL.KEYFACT.3.DETAILS": "Nearly all functionality of Elektra is implemented in <a href=\"/plugins/readme\">plugins</a> which can be combined to powerful functionality.",
     "APP.HOME.LABEL.KEYFACT.3.HEADLINE": "Extendability",
-    "APP.HOME.LABEL.KEYFACT.4.DETAILS": "Automate configuration tasks with powerful <a href=\"/tools/\">tools</a>, surf through configuration with <a href=\"/tools/qt-gui\">GUIs</a>, and <a href=\"/plugins/dbus\">notify</a> other applications about configuration changes.",
+    "APP.HOME.LABEL.KEYFACT.4.DETAILS": "Automate configuration tasks with powerful <a href=\"/tools/gen\">tools</a>, surf through configuration with <a href=\"/tools/qt-gui\">GUIs</a>, and <a href=\"/plugins/dbus\">notify</a> other applications about configuration changes.",
     "APP.HOME.LABEL.KEYFACT.4.HEADLINE": "Batteries Included",
     "APP.HOME.LABEL.KEYFACT.5.DETAILS": "<a href=\"/tutorials/validate-configuration\">Validate configuration</a> immediately on changes, eliminate your configuration duplicates with the help of symbolic links or compute configuration parameters from other configuration values.",
     "APP.HOME.LABEL.KEYFACT.5.HEADLINE": "Configuration Specification",
@@ -304,11 +304,11 @@
     "APP.HOME.LABEL.KEYFACT.8.HEADLINE": "100% Free Software",
     "APP.HOME.LABEL.KEYFACT.9.DETAILS": "Elektra strives to eliminate cross-platform related issues and is therefore suitable for all systems.",
     "APP.HOME.LABEL.KEYFACT.9.HEADLINE": "Cross-platform",
-    "APP.HOME.LABEL.ORIENTATION.1.DETAILS": "You need help in developing a custom plugin? Check out the <a ui-sref=\"main.dyn.tutorials({file: 'plugins-introduction'})\">plugin tutorial</a>!",
+    "APP.HOME.LABEL.ORIENTATION.1.DETAILS": "You need help in developing a custom plugin? Check out the <a href=\"/tutorials/plugins-introduction\">plugin tutorial</a>!",
     "APP.HOME.LABEL.ORIENTATION.1.HEADLINE": "Develop Custom Plugins",
-    "APP.HOME.LABEL.ORIENTATION.2.DETAILS": "Of course you can use Elektra also outside a C or C++ environment. Have a look at our <a ui-sref=\"main.dyn.bindings\">language bindings</a>!",
+    "APP.HOME.LABEL.ORIENTATION.2.DETAILS": "Of course you can use Elektra also outside a C or C++ environment. Have a look at our <a href=\"/bindings/readme\">language bindings</a>!",
     "APP.HOME.LABEL.ORIENTATION.2.HEADLINE": "Use Elektra outside C/C++",
-    "APP.HOME.LABEL.ORIENTATION.3.DETAILS": "Of course we can! An initiative like Elektra asks periodically for <a ui-sref=\"main.dyn.decisions\">decisions</a>! We welcome everyone to join the discussions!",
+    "APP.HOME.LABEL.ORIENTATION.3.DETAILS": "Of course we can! An initiative like Elektra asks periodically for <a href=\"/decisions/readme\">decisions</a>! We welcome everyone to join the discussions!",
     "APP.HOME.LABEL.ORIENTATION.3.HEADLINE": "Can you Elaborate on the Why?",
     "APP.HOME.LABEL.ORIENTATION.4.DETAILS": "This website does not only contain the news and documentation around Elektra. It does also comprise a service that allows for sharing, searching, converting and downloading of configuration snippets in various formats. To search for a snippet, use the search bar at the <a href=\"#top\">top of the page</a>. Uploading new snippets requires an account, which you can register <a href=\"/auth/login\">here</a>.",
     "APP.HOME.LABEL.ORIENTATION.4.HEADLINE": "Sharing of Configuration Snippets",
