--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -292,7 +292,7 @@
     "APP.HOME.HEADLINE.WHATSNEW": "What's new?",
     "APP.HOME.LABEL.KEYFACT.1.DETAILS": "Elektra stores configuration in a global, hierarchical key database. <a href=\"/tutorials/mount-configuration-files\">Mount configuration files</a> into the hierarchy, override single configuration parameters or use profiles. <a href=\"/manpages/kdb\">kdb (1)</a> provides easy access.",
     "APP.HOME.LABEL.KEYFACT.1.HEADLINE": "Global Configuration Database",
-    "APP.HOME.LABEL.KEYFACT.2.DETAILS": "All common and important configuration formats are supported through various <a href=\"/plugins/readme\">storage plugins</a>: XML, JSON, INI, and even special configuration files like <tt>/etc/hosts</tt>.",
+    "APP.HOME.LABEL.KEYFACT.2.DETAILS": "All common and important configuration formats are supported through various storage plugins: <a href=\"/plugins/yajl\">JSON</a>, <a href=\"/plugins/ini\">INI</a>, <a href=\"/plugins/xmltool\">XML</a>, and even special configuration files like <a href=\"/plugins/hosts\"><tt>/etc/hosts</tt></a> and <a href=\"/plugins/augeas\">many others via augeas</a>.",
     "APP.HOME.LABEL.KEYFACT.2.HEADLINE": "Human-readable Configuration Files",
     "APP.HOME.LABEL.KEYFACT.3.DETAILS": "Nearly all functionality of Elektra is implemented in <a href=\"/plugins/readme\">plugins</a> which can be combined to powerful functionality.",
     "APP.HOME.LABEL.KEYFACT.3.HEADLINE": "Extendability",
