website: swap other main points

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -300,24 +300,24 @@
     "APP.HOME.LABEL.KEYFACT.4.HEADLINE": "Batteries Included",
     "APP.HOME.LABEL.KEYFACT.5.DETAILS": "<a href=\"/tutorials/validate-configuration\">Validate configuration</a> immediately on changes, eliminate your configuration duplicates with the help of symbolic links or compute configuration parameters from other configuration values.",
     "APP.HOME.LABEL.KEYFACT.5.HEADLINE": "Configuration Specification",
-    "APP.HOME.LABEL.KEYFACT.6.DETAILS": "Utilize Elektra's <a href=\"/tools/gen\">code generator</a> to generate type-safe configuration access code based on the same specification as used for validation.",
-    "APP.HOME.LABEL.KEYFACT.6.HEADLINE": "Code Generation",
+    "APP.HOME.LABEL.KEYFACT.6.DETAILS": "An important step in utilizing all of Elektras features is the elektrification of your application. We have written a <a href=\"/tutorials/integration-of-your-application\">tutorial</a> for you that explains how to do that!",
+    "APP.HOME.LABEL.KEYFACT.6.HEADLINE": "Elektrify your Application",
     "APP.HOME.LABEL.KEYFACT.7.DETAILS": "The Elektra core is written without external dependencies and with high regard to good performance.",
     "APP.HOME.LABEL.KEYFACT.7.HEADLINE": "Fast Without Dependencies",
     "APP.HOME.LABEL.KEYFACT.8.DETAILS": "Thanks to all components being licensed under the <a href=\"devgettingstarted/license\">BSD license</a>, the Elektra project comprises only of free software.",
     "APP.HOME.LABEL.KEYFACT.8.HEADLINE": "100% Free Software",
     "APP.HOME.LABEL.KEYFACT.9.DETAILS": "Elektra strives to eliminate cross-platform related issues and is therefore suitable for all systems.",
     "APP.HOME.LABEL.KEYFACT.9.HEADLINE": "Cross-platform",
-    "APP.HOME.LABEL.ORIENTATION.1.DETAILS": "You need help in developing a custom plugin? Check out the <a href=\"/tutorials/plugins-introduction\">plugin tutorial</a>!",
+    "APP.HOME.LABEL.ORIENTATION.1.DETAILS": "You need help in developing a custom plugin? Check out the <a href=\"/tutorials/plugins-introduction\">plugin tutorial</a>! Make sure to report an <a href=\"https://github.com/ElektraInitiative/libelektra/issues/new\">issue</a> before, maybe we can do it for you.",
     "APP.HOME.LABEL.ORIENTATION.1.HEADLINE": "Develop Custom Plugins",
-    "APP.HOME.LABEL.ORIENTATION.2.DETAILS": "Of course you can use Elektra also outside a C or C++ environment. Have a look at our <a href=\"/bindings/readme\">language bindings</a>!",
+    "APP.HOME.LABEL.ORIENTATION.2.DETAILS": "Of course you can use Elektra also outside a C or C++ environment. Have a look at our <a href=\"/bindings/readme\">language bindings</a>! You can even write plugins in <a href=\"/plugins/jni\">Java</a>, <a href=\"/plugins/python\">Python</a>, and <a href=\"/plugins/lua\">Lua</a>.",
     "APP.HOME.LABEL.ORIENTATION.2.HEADLINE": "Use Elektra outside C/C++",
-    "APP.HOME.LABEL.ORIENTATION.3.DETAILS": "Of course we can! An initiative like Elektra asks periodically for <a href=\"/decisions/readme\">decisions</a>! We welcome everyone to join the discussions!",
+    "APP.HOME.LABEL.ORIENTATION.3.DETAILS": "Of course we can! An initiative like Elektra asks periodically for <a href=\"/decisions/readme\">decisions</a>! We welcome everyone to join the <a href=\"https://github.com/ElektraInitiative/libelektra/issues\">discussions</a>!",
     "APP.HOME.LABEL.ORIENTATION.3.HEADLINE": "Can you Elaborate on the Why?",
     "APP.HOME.LABEL.ORIENTATION.4.DETAILS": "This website does not only contain the news and documentation around Elektra. It does also comprise a service that allows for sharing, searching, converting and downloading of configuration snippets in various formats. To search for a snippet, use the search bar at the <a href=\"#top\">top of the page</a>. Uploading new snippets requires an account, which you can register <a href=\"/auth/login\">here</a>.",
     "APP.HOME.LABEL.ORIENTATION.4.HEADLINE": "Sharing of Configuration Snippets",
-    "APP.HOME.LABEL.ORIENTATION.5.DETAILS": "An important step in utilizing all of Elektras features is the elektrification of your application. We have written a <a href=\"/tutorials/integration-of-your-application\">tutorial</a> for you that explains how to do that!",
-    "APP.HOME.LABEL.ORIENTATION.5.HEADLINE": "Elektrify your Application",
+    "APP.HOME.LABEL.ORIENTATION.5.DETAILS": "Utilize Elektra's <a href=\"/tools/gen\">code generator</a> to generate type-safe configuration access code based on the same specification as used for validation.",
+    "APP.HOME.LABEL.ORIENTATION.5.HEADLINE": "Code Generation",
     "APP.HOME.LABEL.TOOL.OTHERS.DETAILS": "Also other applications like the <a href=\"http://www.oyranos.org/kolormanager/\" target=\"_blank\">KDE KolorManager</a> already use Elektra! Elektra is available in most distributions like Fedora, Gentoo, Arch Linux, Debian, Ubuntu, Openwrt, OpenSuse, PLDLinux, and LEDE!",
     "APP.HOME.LABEL.TOOL.OTHERS.HEADLINE": "Other Applications",
     "APP.HOME.LABEL.TOOL.QTGUI.DETAILS": "Elektra offers a GUI based on Qt Quick. It simplifies common tasks and offers easy access to the key database itself. A description for the GUI tool can be found <a href=\"/tools/qt-gui\">here</a>.",
