--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -308,7 +308,7 @@
     "APP.HOME.LABEL.KEYFACT.8.HEADLINE": "100% Free Software",
     "APP.HOME.LABEL.KEYFACT.9.DETAILS": "Elektra strives to eliminate cross-platform related issues and is therefore suitable for all systems.",
     "APP.HOME.LABEL.KEYFACT.9.HEADLINE": "Cross-platform",
-    "APP.HOME.LABEL.ORIENTATION.1.DETAILS": "You need help in developing a custom plugin? Check out the <a href=\"/tutorials/plugins-introduction\">plugin tutorial</a>! Make sure to report an <a href=\"https://github.com/ElektraInitiative/libelektra/issues/new\">issue</a> before, maybe we can do it for you.",
+    "APP.HOME.LABEL.ORIENTATION.1.DETAILS": "You need help in developing a custom plugin? Check out the <a href=\"/tutorials/plugins-introduction\">plugin tutorial</a>! Make sure to report an <a href=\"https://github.com/ElektraInitiative/libelektra/issues/new\">issue</a> before: we can help or maybe even do it for you.",
     "APP.HOME.LABEL.ORIENTATION.1.HEADLINE": "Develop Custom Plugins",
     "APP.HOME.LABEL.ORIENTATION.2.DETAILS": "Of course you can use Elektra also outside a C or C++ environment. Have a look at our <a href=\"/bindings/readme\">language bindings</a>! You can even write plugins in <a href=\"/plugins/jni\">Java</a>, <a href=\"/plugins/python\">Python</a>, and <a href=\"/plugins/lua\">Lua</a>.",
     "APP.HOME.LABEL.ORIENTATION.2.HEADLINE": "Use Elektra outside C/C++",
