rest-frontend: explain additional plugin config + rename label

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -82,15 +82,16 @@
     "APP.BREADCRUMBS.MAIN.USERS.DETAILS": "User details",
     "APP.BREADCRUMBS.MAIN.USERS.SEARCH": "User search",
     
+    "APP.CONVERSION.ALTTEXT.FORMATCONF": "You can enter additional configuration parameters for the plugin of the selected format here, they will be appended to the existing plugin configuration. If you enter unrelated configuration parameters, they will be ignored.",
     "APP.CONVERSION.ALTTEXT.VALIDATED": "The configuration snippet has been re-imported to verify that no data gets lost when using this format.",
     "APP.CONVERSION.BUTTON.CLEAR": "Clear fields",
     "APP.CONVERSION.BUTTON.CONVERT": "Convert snippet",
     "APP.CONVERSION.BUTTON.REPORT_PROBLEM": "Report problem on GitHub",
     "APP.CONVERSION.LABEL.INPUT.FORMAT": "Input format:",
-    "APP.CONVERSION.LABEL.INPUT.FORMAT.CONF": "Additional plugin parameters:",
+    "APP.CONVERSION.LABEL.INPUT.FORMAT.CONF": "Additional plugin configuration:",
     "APP.CONVERSION.LABEL.INPUT.SNIPPET": "Input snippet:",
     "APP.CONVERSION.LABEL.OUTPUT.FORMAT": "Output format:",
-    "APP.CONVERSION.LABEL.OUTPUT.FORMAT.CONF": "Additional plugin parameters:",
+    "APP.CONVERSION.LABEL.OUTPUT.FORMAT.CONF": "Additional plugin configuration:",
     "APP.CONVERSION.LABEL.OUTPUT.SNIPPET": "Output snippet:",
     "APP.CONVERSION.LABEL.OUTPUT.VALIDATED": "Validated",
     "APP.CONVERSION.LABEL.VALIDATION.INPUT.FORMAT.REQUIRED": "You have to select an input format.",
