legacy AUTHORS file + change occurences of AUTHORS to .md

--- a/doc/news/2016-06-14_0.8.17.md
+++ b/doc/news/2016-06-14_0.8.17.md
@@ -370,7 +370,7 @@ and will no longer provide `cmake/ELEKTRA_DEBUG_BUILD` `cmake/ELEKTRA_VERBOSE_BU
 ## Other ##
 
 - Gabriel Rauter is now listed in
-  [AUTHORS](https://github.com/elektrainitiative/libelektra/tree/master/doc/AUTHORS)
+  [AUTHORS.md](https://github.com/elektrainitiative/libelektra/tree/master/doc/AUTHORS.md)
 - constants plugin: configure_file now uses current binary directory, not cluttering
   the main build directory.
 - fix ssize_t for VS2015,
